fixed portfolio section cutting off on iphones

--- a/css/main.scss
+++ b/css/main.scss
@@ -226,7 +226,8 @@ font-size: 40px;
         width: 320px;
 
         .imgProject img{
-            width: 325px;
+            width: 300px;
+            margin-right: 20px;
         }
     }
 }
